se agrego soporte a librerias javascript

--- a/core/static/index.html
+++ b/core/static/index.html
@@ -12,6 +12,7 @@
     <body>
 
         <!-- CORE -->
+        <script src="assets/js/libs.min.js"></script>    
         <script src="assets/js/main.min.js"></script>    
         <canvas id="game"></canvas>
     </body>
