se agrego setting para configurar el tama~o del lienzo

--- a/core/static/index.html
+++ b/core/static/index.html
@@ -13,7 +13,8 @@
 
         <!-- CORE -->
         <script src="assets/js/libs.min.js"></script>    
-        <script src="assets/js/main.min.js"></script>    
+        <script src="assets/js/core.min.js"></script>    
+        <script src="assets/js/dev.min.js"></script>    
         <canvas id="game"></canvas>
     </body>
 </html>
