se configuro el loading en el framework

--- a/core/static/index.html
+++ b/core/static/index.html
@@ -11,10 +11,13 @@
     </head>
     <body>
 
+
+        <span id="loading"></span>
+        <canvas id="game"></canvas>
+
         <!-- CORE -->
         <script src="assets/js/libs.min.js"></script>    
         <script src="assets/js/core.min.js"></script>    
         <script src="assets/js/dev.min.js"></script>    
-        <canvas id="game"></canvas>
     </body>
 </html>
