se agrego nuevo settings

--- a/core/static/index.html
+++ b/core/static/index.html
@@ -15,7 +15,7 @@
 
         <!-- CORE -->
         <script src="assets/js/libs.min.js"></script>    
-        <script src="assets/js/core.min.js"></script>    
+        <script src="assets/js/devGameJs.min.js"></script>    
         <script src="assets/js/dev.min.js"></script>    
     </body>
 </html>
