se trabaja en el la estructura de DEBUG console

--- a/core/static/index.html
+++ b/core/static/index.html
@@ -10,8 +10,30 @@
 
     </head>
     <body>
+    
+        <div class="content_canvas">
+            <canvas id="game"></canvas>
+        </div>
 
-        <canvas id="game"></canvas>
+        <!-- DEBUG MODULE -->
+        <div class="content_debug">
+            <div class="articles">
+                <div class="header">Options</div>
+                <div class="body">a</div>
+            </div>
+            <div class="articles">
+                <div class="header">List Objects</div>
+                <div class="body">b</div>
+            </div>
+            <div class="articles">
+                <div class="header">Info. of Object: Object name</div>
+                <div class="body">c</div>
+            </div>
+            <div class="articles core">
+                <div class="header">Core</div>
+                <div class="body">d</div>
+            </div>
+        </div>
 
         <!-- CORE -->
         <script src="assets/js/libs.min.js"></script>    
