se agrego control de debug en la parte grafica

--- a/core/static/index.html
+++ b/core/static/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <!-- DEBUG MODULE -->
-        <div class="content_debug">
+        <div id="debug">
             <div class="articles">
                 <div class="header">Options</div>
                 <div class="body">a</div>
