se agergo css al debug

--- a/core/static/index.html
+++ b/core/static/index.html
@@ -17,21 +17,47 @@
 
         <!-- DEBUG MODULE -->
         <div id="debug">
-            <div class="articles">
-                <div class="header">Options</div>
-                <div class="body">a</div>
+            <div class="header_debug">
+                <span>Fps: 60</span>
+                <span>Cant.Obj.: 12</span>
             </div>
-            <div class="articles">
-                <div class="header">List Objects</div>
-                <div class="body">b</div>
-            </div>
-            <div class="articles">
-                <div class="header">Info. of Object: Object name</div>
-                <div class="body">c</div>
-            </div>
-            <div class="articles core">
-                <div class="header">Core</div>
-                <div class="body">d</div>
+            <div class="content_debug">
+                <div class="articles">
+                    <div class="header">Options</div>
+                    <div class="body">
+                        <span>a</span>
+                        <span>a</span>
+                        <span>a</span>
+                        <span>a</span>
+                    </div>
+                </div>
+                <div class="articles">
+                    <div class="header">List Objects</div>
+                    <div class="body">
+                        <span>b</span>
+                        <span>b</span>
+                        <span>b</span>
+                        <span>b</span>
+                    </div>
+                </div>
+                <div class="articles">
+                    <div class="header">Info. of Object: Object name</div>
+                    <div class="body">
+                        <span>c</span>
+                        <span>c</span>
+                        <span>c</span>
+                        <span>c</span>
+                    </div>
+                </div>
+                <div class="articles core">
+                    <div class="header">Core</div>
+                    <div class="body">
+                        <span>d</span>
+                        <span>d</span>
+                        <span>d</span>
+                        <span>d</span>
+                    </div>
+                </div>
             </div>
         </div>
 
