se agrego funcion base debug

--- a/core/static/index.html
+++ b/core/static/index.html
@@ -19,7 +19,7 @@
         <div id="debug">
             <div class="header_debug">
                 <span>Fps: 60</span>
-                <span>Cant.Obj.: 12</span>
+                <span id="objs">Cant.Obj.: 0</span>
             </div>
             <div class="content_debug">
                 <div class="articles">
