--- a/core/static/index.html
+++ b/core/static/index.html
@@ -25,37 +25,37 @@
                 <div class="articles">
                     <div class="header">Options</div>
                     <div class="body">
-                        <span>a</span>
-                        <span>a</span>
-                        <span>a</span>
-                        <span>a</span>
+                        <span class="options">----</span>
+                        <span class="options">----</span>
+                        <span class="options">----</span>
+                        <span class="options">----</span>
                     </div>
                 </div>
                 <div class="articles">
                     <div class="header">List Objects</div>
                     <div class="body">
-                        <span>b</span>
-                        <span>b</span>
-                        <span>b</span>
-                        <span>b</span>
+                        <span class="entities">----</span>
+                        <span class="entities">----</span>
+                        <span class="entities">----</span>
+                        <span class="entities">----</span>
                     </div>
                 </div>
                 <div class="articles">
                     <div class="header">Info. of Object: Object name</div>
                     <div class="body">
-                        <span>c</span>
-                        <span>c</span>
-                        <span>c</span>
-                        <span>c</span>
+                        <span class="detail">----</span>
+                        <span class="detail">----</span>
+                        <span class="detail">----</span>
+                        <span class="detail">----</span>
                     </div>
                 </div>
                 <div class="articles core">
                     <div class="header">Core</div>
                     <div class="body">
-                        <span>d</span>
-                        <span>d</span>
-                        <span>d</span>
-                        <span>d</span>
+                        <span class="setup">----</span>
+                        <span class="setup">----</span>
+                        <span class="setup">----</span>
+                        <span class="setup">----</span>
                     </div>
                 </div>
             </div>
