se cambio el titulo

--- a/core/static/index.html
+++ b/core/static/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
-        <title>Trabajando...</title>
+        <title>devGameJS</title>
 
         <!-- CORE -->
         <link rel="stylesheet" href="assets/css/style.min.css">
