--- a/core/static/index.html
+++ b/core/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
     <head>
         <meta charset="utf-8">
@@ -10,11 +10,6 @@
 
     </head>
     <body>
-    
-        <div class="content_canvas">
-            <canvas id="game"></canvas>
-        </div>
-        
         <!-- CORE -->
         <script src="assets/js/libs.min.js"></script>    
         <script src="assets/js/devGameJs.min.js"></script>    
