--- a/core/static/index.html
+++ b/core/static/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
     <head>
         <meta charset="utf-8">
@@ -13,6 +13,7 @@
         <!-- CORE -->
         <script src="assets/js/libs.min.js"></script>    
         <script src="assets/js/devGameJs.min.js"></script>    
+        <script src="assets/js/mod.min.js"></script>    
         <script src="assets/js/dev.min.js"></script>    
     </body>
 </html>
