se cambio dise;o del juego

--- a/example/spaceInvader/index.html
+++ b/example/spaceInvader/index.html
@@ -1,4 +1,16 @@
-<canvas id="game" width="800" height="600" style="background: #000"></canvas>
+<style>
+  body {
+    background: #DDD
+  }
+  canvas {
+    display: flex;
+    background: #FFF;
+    margin: 10px auto;
+    box-shadow: 0 5px 15px #AAA;
+  }
+</style>
+
+<canvas id="game" width="800" height="600"></canvas>
 
 <script src="../../devGame.js"></script>
 <script src="lib/stats.min.js"></script>
