write to written

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="section-heading">
           <h1 class="title wow fadeInDown" data-wow-delay=".3s">DevGame Experiments</h1>
           <p class="wow fadeInDown" data-wow-delay=".5s">
-            Game Engine write in CoffeeScript
+            Game Engine written in CoffeeScript
           </p>
         </div>
 
