se agrego colision rectangulo a rectangulo

--- a/index.html
+++ b/index.html
@@ -120,6 +120,29 @@
           <div class="col-sm-4 col-xs-12">
             <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
               <div class="img-wrapper">
+                <img src="example/collision/cover.png" class="img-responsive" alt="" >
+                <div class="overlay">
+                  <div class="buttons">
+                    <a rel="gallery" target="_blank" class="fancybox" href="example/collision/index.html">Demo</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/">Code</a>
+                  </div>
+                </div>
+              </div>
+              <figcaption>
+                <h4>
+                  <a href="#">
+                    Rectangle collision
+                  </a>
+                </h4>
+                <p>
+                  Collision rectangle to rectangle.
+                </p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-sm-4 col-xs-12">
+            <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
+              <div class="img-wrapper">
                 <img src="example/keyboard/cover.png" class="img-responsive" alt="" >
                 <div class="overlay">
                   <div class="buttons">
