se agrego enlace al codigo en github

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" target="_blank" class="fancybox" href="example/basic/index.html">Demo</a>
-                    <a target="_blank" href="https://github.com/formatcom/devGameJS/">Code</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/basic">Code</a>
                   </div>
                 </div>
               </div>
@@ -78,7 +78,7 @@
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" target="_blank" class="fancybox" href="example/fps/index.html">Demo</a>
-                    <a target="_blank" href="https://github.com/formatcom/devGameJS/">Code</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/fps">Code</a>
                   </div>
                 </div>
               </div>
@@ -101,7 +101,7 @@
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" target="_blank" class="fancybox" href="example/animation/index.html">Demo</a>
-                    <a target="_blank" href="https://github.com/formatcom/devGameJS/">Code</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/animation">Code</a>
                   </div>
                 </div>
               </div>
@@ -124,7 +124,7 @@
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" target="_blank" class="fancybox" href="example/collision/index.html">Demo</a>
-                    <a target="_blank" href="https://github.com/formatcom/devGameJS/">Code</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/collision">Code</a>
                   </div>
                 </div>
               </div>
@@ -147,7 +147,8 @@
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" target="_blank" class="fancybox" href="example/keyboard/index.html">Demo</a>
-                    <a target="_blank" href="https://github.com/formatcom/devGameJS/">Code</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/keyboard">Code</a>
+                  </div>
                   </div>
                 </div>
               </div>
@@ -170,7 +171,7 @@
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" target="_blank" class="fancybox" href="example/snake/index.html">Demo</a>
-                    <a target="_blank" href="https://github.com/formatcom/devGameJS/">Code</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/snake">Code</a>
                   </div>
                 </div>
               </div>
@@ -193,7 +194,7 @@
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" target="_blank" class="fancybox" href="example/mouse/index.html">Demo</a>
-                    <a target="_blank" href="https://github.com/formatcom/devGameJS/">Code</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/mouse">Code</a>
                   </div>
                 </div>
               </div>
