--- a/index.html
+++ b/index.html
@@ -232,6 +232,33 @@
               </figcaption>
             </figure>
           </div>
+
+          <div class="col-sm-4 col-xs-12">
+            <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
+              <div class="img-wrapper">
+                <img src="example/distance/cover.png" class="img-responsive" alt="" >
+                <div class="overlay">
+                  <div class="buttons">
+                    <a rel="gallery" target="_blank" class="fancybox" href="example/distance/index.html">Demo</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/distance">Code</a>
+                  </div>
+                </div>
+              </div>
+              <figcaption>
+                <h4>
+                  <a href="#">
+                    Distance
+                  </a>
+                </h4>
+                <p>
+                  distance circle to circle.
+                </p>
+              </figcaption>
+            </figure>
+          </div>
+
+
+
         </div>
       </div>
     </section> <!-- #works -->
