se agrego colicion circulo y circulo

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
               </figcaption>
             </figure>
           </div>
+
           <div class="col-sm-4 col-xs-12">
             <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms">
               <div class="img-wrapper">
@@ -94,6 +95,7 @@
               </figcaption>
             </figure>
           </div>
+
           <div class="col-sm-4 col-xs-12">
             <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms">
               <div class="img-wrapper">
@@ -117,6 +119,7 @@
               </figcaption>
             </figure>
           </div>
+
           <div class="col-sm-4 col-xs-12">
             <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
               <div class="img-wrapper">
@@ -140,6 +143,7 @@
               </figcaption>
             </figure>
           </div>
+
           <div class="col-sm-4 col-xs-12">
             <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
               <div class="img-wrapper">
@@ -163,6 +167,31 @@
               </figcaption>
             </figure>
           </div>
+
+          <div class="col-sm-4 col-xs-12">
+            <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
+              <div class="img-wrapper">
+                <img src="example/collision3/cover.png" class="img-responsive" alt="" >
+                <div class="overlay">
+                  <div class="buttons">
+                    <a rel="gallery" target="_blank" class="fancybox" href="example/collision3/index.html">Demo</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/collision3">Code</a>
+                  </div>
+                </div>
+              </div>
+              <figcaption>
+                <h4>
+                  <a href="#">
+                    Circle and Circle collision
+                  </a>
+                </h4>
+                <p>
+                  Collision circle to circle.
+                </p>
+              </figcaption>
+            </figure>
+          </div>
+
           <div class="col-sm-4 col-xs-12">
             <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
               <div class="img-wrapper">
@@ -186,6 +215,7 @@
               </figcaption>
             </figure>
           </div>
+
           <div class="col-sm-4 col-xs-12">
             <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
               <div class="img-wrapper">
@@ -209,6 +239,7 @@
               </figcaption>
             </figure>
           </div>
+
           <div class="col-sm-4 col-xs-12">
             <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
               <div class="img-wrapper">
