se agrego ejemplo de click

--- a/index.html
+++ b/index.html
@@ -282,13 +282,35 @@
                   </a>
                 </h4>
                 <p>
-                  distance circle to circle.
+                  Distance circle to circle.
                 </p>
               </figcaption>
             </figure>
           </div>
 
-
+          <div class="col-sm-4 col-xs-12">
+            <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
+              <div class="img-wrapper">
+                <img src="example/click/cover.png" class="img-responsive" alt="" >
+                <div class="overlay">
+                  <div class="buttons">
+                    <a rel="gallery" target="_blank" class="fancybox" href="example/click/index.html">Demo</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/click">Code</a>
+                  </div>
+                </div>
+              </div>
+              <figcaption>
+                <h4>
+                  <a href="#">
+                    Click Me
+                  </a>
+                </h4>
+                <p>
+                  Click in circle.
+                </p>
+              </figcaption>
+            </figure>
+          </div>
 
         </div>
       </div>
