se agrego el hola mundo

--- a/index.html
+++ b/index.html
@@ -5,43 +5,26 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>DevGame Experiments</title>
+    <title>DevGame Experiments v0.5.0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Twitter Bootstrs CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- animate css -->
     <link rel="stylesheet" href="css/animate.css">
-    <!-- owl craousel css -->
-    <link rel="stylesheet" href="css/owl.carousel.css">
-    <link rel="stylesheet" href="css/owl.theme.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.css">
     <!-- template main css file -->
     <link rel="stylesheet" href="css/main.css">
     <!-- responsive css -->
     <link rel="stylesheet" href="css/responsive.css">
 
-    <!-- Template Javascript Files
-    ================================================== -->
-    <!-- modernizr js -->
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    <!-- jquery -->
-    <!-- owl carouserl js -->
-    <script src="js/owl.carousel.min.js"></script>
-    <!-- bootstrap js -->
 
-    <script src="js/bootstrap.min.js"></script>
-    <!-- wow js -->
     <script src="js/wow.min.js"></script>
-    <!-- slider js -->
-    <script src="js/jquery.fancybox.js"></script>
-    <!-- template main js -->
   </head>
   <body>
     <section id="works" class="works">
       <div class="container">
         <div class="section-heading">
-          <h1 class="title wow fadeInDown" data-wow-delay=".3s">DevGame Experiments</h1>
+          <h1 class="title wow fadeInDown" data-wow-delay=".3s">DevGame Experiments v0.5.0</h1>
           <p class="wow fadeInDown" data-wow-delay=".5s">
             Game Engine written in CoffeeScript
           </p>
@@ -54,19 +37,19 @@
                 <img src="example/basic/cover.png" class="img-responsive" alt="this is a title" >
                 <div class="overlay">
                   <div class="buttons">
-                    <a rel="gallery" target="_blank" class="fancybox" href="example/basic/index.html">Demo</a>
-                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/basic">Code</a>
+                    <a rel="gallery" target="_blank" class="fancybox" href="example/01">Demo</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/01">Code</a>
                   </div>
                 </div>
               </div>
               <figcaption>
                 <h4>
                   <a href="#">
-                    Basic
+                    Dibujar Rectangulo En Escena
                   </a>
                 </h4>
                 <p>
-                  Hello World.
+                  Hola Mundo
                 </p>
               </figcaption>
             </figure>
