se agrego ejemplo de gameloop

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <img src="example/fps/cover.png" class="img-responsive" alt="this is a title" >
                 <div class="overlay">
                   <div class="buttons">
-                    <a rel="gallery" target="_blank" class="fancybox" href="example/fps/index.html">Demo</a>
-                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/fps">Code</a>
+                    <a rel="gallery" target="_blank" class="fancybox" href="example/02">Demo</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/02">Code</a>
                   </div>
                 </div>
               </div>
@@ -73,7 +73,7 @@
                   </a>
                 </h4>
                 <p>
-                  Show fps.
+                  Construir tu primer bucle de juego y dibujar FPS en pantalla
                 </p>
               </figcaption>
             </figure>
