--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
 
 
+
+
           <div class="row">
             <div class="col-sm-4 col-xs-12">
               <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
@@ -66,7 +68,7 @@
                 <figcaption>
                 <h4>
                   <a href="#">
-                    Trabajar con varios elementos en pantalla
+                    01.- Trabajar con varios elementos en pantalla
                   </a>
                 </h4>
                 <p>
@@ -79,14 +81,43 @@
           </div>
 
 
+
+          <div class="row">
+            <div class="col-sm-4 col-xs-12">
+              <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
+                <div class="img-wrapper">
+                  <img src="example/03/cover.png" class="img-responsive" alt="this is a title" >
+                  <div class="overlay">
+                    <div class="buttons">
+                      <a rel="gallery" target="_blank" class="fancybox" href="example/03">Demo</a>
+                      <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/03">Code</a>
+                    </div>
+                  </div>
+                </div>
+                <figcaption>
+                <h4>
+                  <a href="#">
+                    02.- Trabajar con varios elementos en pantalla
+                  </a>
+                </h4>
+                <p>
+                  Organizando los objetos dentro de funciones
+                </p>
+                </figcaption>
+              </figure>
+            </div>
+
+          </div>
+
+
           <div class="col-sm-4 col-xs-12">
             <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms">
               <div class="img-wrapper">
-                <img src="example/03/cover.png" class="img-responsive" alt="this is a title" >
+                <img src="example/04/cover.png" class="img-responsive" alt="this is a title" >
                 <div class="overlay">
                   <div class="buttons">
-                    <a rel="gallery" target="_blank" class="fancybox" href="example/03">Demo</a>
-                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/03">Code</a>
+                    <a rel="gallery" target="_blank" class="fancybox" href="example/04">Demo</a>
+                    <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/04">Code</a>
                   </div>
                 </div>
               </div>
@@ -104,7 +135,7 @@
           </div>
 
 
-      </div>
+        </div>
     </section> <!-- #works -->
 
   </body>
