--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="web/js/wow.min.js"></script>
   </head>
   <body>
+  <div class="container">
     <section id="works" class="works">
       <div class="container">
         <div class="section-heading">
@@ -123,6 +124,13 @@
 
         </div>
     </section> <!-- #works -->
+</div>
+  <div class="container">
+    <footer>
+      <p>Contributors :</p>
+      <a href="https://github.com/formatcom" target="_blank">FormatCom</a> - <a href="https://github.com/jsstoni" target="_blank">jsstoni</a>
+    </footer>
+  </div>
 
   </body>
 </html>
