se agrego el contador de cpu y fps

--- a/index.html
+++ b/index.html
@@ -111,11 +111,36 @@
                 <figcaption>
                 <h4>
                   <a href="#">
-                    GameLoop
+                    1.- GameLoop
                   </a>
                 </h4>
                 <p>
                 Construir tu primer bucle de juego y dibujar FPS en pantalla
+                </p>
+                </figcaption>
+              </figure>
+            </div>
+
+
+            <div class="col-sm-4 col-xs-12">
+              <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms">
+                <div class="img-wrapper">
+                  <img src="example/05/cover.png" class="img-responsive" alt="this is a title" >
+                  <div class="overlay">
+                    <div class="buttons">
+                      <a rel="gallery" target="_blank" class="fancybox" href="example/05">Demo</a>
+                      <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/05">Code</a>
+                    </div>
+                  </div>
+                </div>
+                <figcaption>
+                <h4>
+                  <a href="#">
+                    2.- GameLoop
+                  </a>
+                </h4>
+                <p>
+                  Limitar fps con el timer  y contar los ciclos de proceso
                 </p>
                 </figcaption>
               </figure>
