botones en el header adaptando el css

--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
   </head>
   <body>
+
   <div class="container">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+      <ul class="nav navbar-nav"></ul>
+      <ul class="nav navbar-nav navbar-right">
+      <li><iframe src="https://ghbtns.com/github-btn.html?user=formatcom&repo=devGameJS&type=watch&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe></li>
+      <li><a href="https://github.com/formatcom/devGameJS/archive/master.zip">Descargar</a></li>
+      </ul>
+      </div>
+    </nav>
+
     <section id="works" class="works">
-      <div class="container">
         <div class="section-heading">
-          <h1 class="title wow fadeInDown" data-wow-delay=".3s">DevGame Experiments v0.5.0</h1>
+          <h1 class="title wow fadeInDown" data-wow-delay=".3s">DevGame Experimentos v0.5.0</h1>
           <p class="wow fadeInDown" data-wow-delay=".5s">
-          Game Engine written in CoffeeScript
+          Motor del juego escrito en CoffeeScript
           </p>
         </div>
 
@@ -39,14 +49,8 @@
                 </div>
               </div>
               <figcaption>
-              <h4>
-                <a href="#">
-                  Dibujar Rectangulo En Pantalla
-                </a>
-              </h4>
-              <p>
-              Hola Mundo
-              </p>
+              <h4><a href="#">Dibujar Rectangulo En Pantalla</a></h4>
+              <p>Hola Mundo</p>
               </figcaption>
             </figure>
           </div>
@@ -130,8 +134,8 @@
                   <img src="example/05/cover.png" class="img-responsive" alt="this is a title" >
                   <div class="overlay">
                     <div class="buttons">
-                      <a rel="gallery" target="_blank" class="fancybox" href="example/05">Demo</a>
-                      <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/05">Code</a>
+                      <a rel="gallery" target="_blank" class="fancybox" href="example/05"><i class="fa fa-eye" aria-hidden="true"></i> Demo</a>
+                      <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/05"><i class="fa fa-code" aria-hidden="true"></i> Code</a>
                     </div>
                   </div>
                 </div>
@@ -147,13 +151,13 @@
                 </figcaption>
               </figure>
             </div>
-
+            
         </div>
     </section> <!-- #works -->
 </div>
   <div class="container">
     <footer>
-      <p>Contributors :</p>
+      <p>Colaboradores :</p>
       <a href="https://github.com/formatcom" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> FormatCom</a> - <a href="https://github.com/jsstoni" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> jsstoni</a>
     </footer>
   </div>
