--- a/index.html
+++ b/index.html
@@ -176,6 +176,31 @@
                 </figcaption>
               </figure>
             </div>
+
+
+            <div class="col-sm-4 col-xs-12">
+              <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms">
+                <div class="img-wrapper">
+                  <img src="example/07/cover.png" class="img-responsive" alt="this is a title" >
+                  <div class="overlay">
+                    <div class="buttons">
+                      <a rel="gallery" target="_blank" class="fancybox" href="example/07"><i class="fa fa-eye" aria-hidden="true"></i> Demo</a>
+                      <a target="_blank" href="https://github.com/formatcom/devGameJS/tree/master/example/07"><i class="fa fa-code" aria-hidden="true"></i> Code</a>
+                    </div>
+                  </div>
+                </div>
+                <figcaption>
+                <h4>
+                  <a href="#">
+                    02.- Movimiento
+                  </a>
+                </h4>
+                <p>
+                  Moviendo varios objetos.
+                </p>
+                </figcaption>
+              </figure>
+            </div>
             
         </div>
     </section> <!-- #works -->
